vibrator intensity + fixing displayed titel
Conflicts:
	res/layout/ns_tweak.xml
	res/values/constants.xml
	res/values/strings.xml
	src/mobi/cyann/shifttools/SettingsManager.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -142,4 +142,8 @@
 
     <!-- About Activity -->
     <string name="label_info">Info</string>
+
+	<!-- misc settings -->
+	<string name="vibration_intensity">Vibration intensity</string>
+	<string name="label_vibration_intensity">Set vibration intensity</string>
 </resources>
