--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -139,4 +139,7 @@
 	<string name="label_interactive_timer_rate">Timer rate</string>
 
 	<string name="msg_kernel_changed">Settings discarded because the kernel version has changed</string>
+
+    <!-- About Activity -->
+    <string name="label_info">Info</string>
 </resources>
