option to ignore kernel changes
Conflicts:
	res/values/constants.xml
	res/values/strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,6 +58,10 @@
     <string name="label_shifttools_service">ShiftTools service</string>
     <string name="summaryOn_shifttools_service">Enable service for BLN missed call and timeout</string>
     <string name="summaryOff_shifttools_service">Disable service for BLN missed call and timeout</string>
+    <string name="label_force_restore_on_boot">Ignore Kernel Version</string>
+    <string name="summaryOn_force_restore_on_boot">Settings apply even after Kernel change</string>
+    <string name="summaryOff_force_restore_on_boot">Reset to default settings on boot if Kernel changend</string>
+
     <string name="label_load_settings">Load</string>
     <string name="summary_load_settings">Load settings from saved file</string>
     <string name="label_save_settings">Save</string>
